<resources>
    <string name="app_name">LearnoVerse</string>
    <string-array name="interests_array">
        <item>Type of user</item>
        <item>Learner</item>
        <item>Instructor</item>
    </string-array>
    <string name="select_student_prompt">Select a student</string>
    <string-array name="status_options">
        <item>Progress</item>
        <item>Complete</item>
    </string-array>
    <string-array name="availability_options">
        <item>Full Time</item>
        <item>Part Time</item>
    </string-array>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="i_m_a_learner">SignUp as Learner</string>
    <string name="i_m_an_instructor">SignUp as Instructor</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="Weekly">Weekly></string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THUR">THUR</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="Enroll_for_Course">Enroll for Course</string>
    <string name="Schedule">Schedule</string>
    <string name="Comment_for_Instructor">Comment for Instructor</string>
    <string name="Enter_your_comments">Enter your comments</string>
    <string name="Make_Payment">Make Payment</string>
    <string name="Name">Name:</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Save">Save</string>
    <string name="Welcome">Welcome</string>
    <string name="Choose_Subjects">Choose Subjects</string>
    <string name="Video_Recommendations">Video Recommendations</string>
    <string name="Photography">Photography</string>
    <string name="Photography_Basics_in_10_MINUTES">Photography Basics in 10 MINUTES</string>
    <string name="Coding">Coding</string>
    <string name="you_need_to_learn_Python_RIGHT_NOW">you need to learn Python RIGHT NOW!!</string>
    <string name="Maths">Maths</string>
    <string name="How_to_Get_Better_at_Math">How to Get Better at Math</string>
    <string name="My_Courses">My Courses</string>
    <string name="Offer_New_Course">Offer New Course</string>
    <string name="Courses">Courses</string>
    <string name="Upload_Content">Upload Content</string>
    <string name="Registered_Students">Registered Students</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Select_Date_of_Birth">Select Date of Birth</string>
    <string name="Date_of_Birth">Date of Birth</string>
    <string name="Email_ID">Email ID</string>
    <string name="highest_qualification">Highest Qualification</string>
    <string name="availabilty">Availabilty</string>
    <string name="expertise">Expertise</string>
    <string name="experience">Experience</string>
    <string name="submit">SUBMIT</string>
    <string name="no_students_registered_for_this_course_yet">No Students Registered for this course yet</string>
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="upload_pdf_material">Upload PDF Material</string>
    <string name="enter_material_name">Enter Material Name</string>
    <string name="enter_pdf_link">Enter PDF Link</string>
    <string name="upload">Upload</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="description_of_the_instructor_brief_introduction_and_expertise">Description of the instructor. Brief introduction and expertise.</string>
    <string name="complete_your_profile">Complete your profile !</string>
    <string name="app_logo">App Logo</string>
    <string name="last_name">Last Name</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="interests">Interests</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="john_doe">John Doe</string>
    <string name="edit_date_of_birth">Edit Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="country">Country</string>
    <string name="united_states">United States</string>
    <string name="edit_highest_qualification">Edit Highest Qualification</string>
    <string name="bachelor_s_degree">Bachelor\'s Degree</string>
    <string name="travel_photography_hiking">Travel, Photography, Hiking</string>
    <string name="languages_known">Languages Known</string>
    <string name="edit_languages_known">Edit Languages Known</string>
    <string name="english_spanish_french">English, Spanish, French</string>
    <string name="gender">Gender</string>
    <string name="availability">Availability</string>
    <string name="availabity">Availabity</string>
    <string name="edit_availability">Edit availability</string>
    <string name="expierence">Expierence</string>
    <string name="edit_experience">Edit experience</string>
    <string name="my_courses">My Courses</string>
    <string name="create_account">Create Account</string>
    <string name="course_materials">Course Materials</string>
    <string name="december_2023">December 2023</string>
    <string name="new_event">New Event</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thur">THUR</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="event_title">Event Title</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="subject">Subject</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="location">Location</string>
    <string name="course_name">Course Name</string>
    <string name="rate_course">Rate Course</string>
    <string name="enroll">Enroll</string>
    <string name="number_of_sessions">Number of Sessions</string>
    <string name="price">Price</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="course_description">Course Description</string>
    <string name="next">Next</string>
    <string name="no_of_sessions">No. of Sessions</string>
    <string name="status">status</string>
    <string name="material_name">Material Name</string>
    <string name="pdf_link">PDF Link</string>
    <string name="meet_link">Meet Link</string>
    <string name="session_date">Session Date</string>
    <string name="session_name">Session Name</string>
    <string name="session_time">Session Time</string>
    <string name="ok">OK</string>
    <string name="student">Student:</string>
    <string name="payment_done">Payment Done:</string>
    <string name="learner_comment">Learner Comment:</string>
    <string name="enter_meeting_link">Enter Meeting Link</string>
    <string name="send_meet_link">Send Meet Link</string>


</resources>