<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_event_title"
        android:layout_width="386dp"
        android:layout_height="84dp"
        android:hint="@string/event_title"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/edit_text_start_time"
        android:layout_width="395dp"
        android:layout_height="74dp"
        android:layout_alignBottom="@id/edit_text_event_title"
        android:layout_marginBottom="-105dp"
        android:hint="@string/start_time"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/edit_text_end_time"
        android:layout_width="395dp"
        android:layout_height="81dp"
        android:layout_alignBottom="@id/edit_text_start_time"
        android:layout_marginBottom="-125dp"
        android:hint="@string/end_time"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="372dp"
        android:layout_height="67dp"
        android:layout_alignBottom="@id/edit_text_end_time"
        android:layout_marginBottom="-96dp"
        android:hint="@string/subject"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_text_teacher_name"
        android:layout_width="380dp"
        android:layout_height="76dp"
        android:layout_alignBottom="@id/edit_text_subject"
        android:layout_marginBottom="-90dp"
        android:hint="@string/teacher_s_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="222dp"
        android:layout_height="97dp"

        android:layout_alignBottom="@id/edit_text_teacher_name"
        android:layout_marginBottom="-111dp"
        android:hint="@string/location"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_save_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edit_text_location"
        android:layout_marginLeft="297dp"
        android:text="Save" />

</RelativeLayout>
