<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_your_profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/learnerImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/learner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/learnerImageView"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/first_name"
                        android:hint="First Name"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:id="@+id/last_name"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <!-- Date of Birth Field -->
                <Button
                    android:id="@+id/dateOfBirthButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/select_date_of_birth"
                    android:onClick="showDatePicker"
                    android:padding="12dp"
                    android:textColor="@android:color/black" />

                <!-- Date of Birth EditText -->
                <EditText
                    android:id="@+id/dateOfBirthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorAccent" />


                <!-- Radio Buttons for Gender -->
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/gender"
                    android:layout_marginBottom="16dp">

                    <RadioButton
                        android:layout_width="192dp"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                </RadioGroup>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/phone_number"
                    android:id="@+id/phone_number"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="Highest Qualification"
                    android:id="@+id/qualification"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/interests"
                    android:id="@+id/interests"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorAccent" />

                <Button
                    android:id="@+id/continueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="SUBMIT"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
