<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profileImage"
            android:src="@drawable/avtar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="selectProfilePicture"
            android:focusable="true" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="John Doe"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Save"/>

        <!-- CardView for Date of Birth -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/calendar"
                    android:contentDescription="Date of Birth"
                    android:layout_gravity="left"/>

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:text="Date of Birth"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editDob"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="Edit Date of Birth"
                    android:paddingStart="8dp"/>
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/dobText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"

                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView for Mobile Number -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/calendar"
                    android:contentDescription="Mobile Number"
                    android:layout_gravity="left"/>

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"

                    android:text="Mobile Number"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editmobile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:contentDescription="Edit Date of Birth"
                    android:paddingStart="8dp"/>
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/mobile"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView for Country -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/equality"
                    android:contentDescription="gender"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:text="@string/gender"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editgender"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:contentDescription="Edit Gender"
                    android:paddingStart="8dp" />
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView for Highest Qualification -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/university"
                    android:contentDescription="Highest Qualification"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:text="Highest Qualification"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editQualification"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:contentDescription="Edit Highest Qualification"
                    android:paddingStart="8dp" />
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/qualification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- CardView for Subjects Taught -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/available"
                    android:contentDescription="@string/availability"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:text="@string/availabity"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editavail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:contentDescription="@string/edit_availability"
                    android:paddingStart="8dp" />
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/availability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView for Experience -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/exp"
                    android:contentDescription="expertise"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:text="Expertise"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editExpertise"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:contentDescription="Edit Expertise"
                    android:paddingStart="8dp" />
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/expertise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- CardView for Languages Known -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="16dp">

            <!-- First Row (Heading) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/experience"
                    android:contentDescription="@string/expierence"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:text="Experience"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editexprience"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="right"
                    android:contentDescription="@string/edit_experience"
                    android:paddingStart="8dp" />
            </LinearLayout>

            <!-- Second Row (Value) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="8dp">

                <EditText
                    android:id="@+id/exprience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>





    </LinearLayout>
</ScrollView>